Io ny ana fa vita ny page contact

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <li><a href="vie-etudiante.html">Vie étudiante</a></li>
                         <li><a href="partenariats.html">Partenariats</a></li>
                         <li><a href="projet-equipe.html">Projet et Equipe</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="/Heritiana/index.html">Contact</a></li>
                      </ul>
                 </nav>    
             </div>
